--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,7 @@ colorama>=0.4.6
 flask>=3.0.0
 flask-cors>=4.0.0
 gunicorn>=21.0.0
+google-api-python-client>=2.100.0
+youtube-transcript-api>=0.6.0
 
 
